# Multi-Agent-Rag

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: streamlit_app.py
data/sample_reports/: README.txt
notebooks/: demo.ipynb
src/multi_agent_rag/: __init__.py  config.py
src/multi_agent_rag/agents/: reasoning_agent.py  retrieval_agent.py  supervisor.py  validation_agent.py
src/multi_agent_rag/graph/: builder.py  edges.py  nodes.py  state.py
src/multi_agent_rag/tools/: grounding_tool.py  search_tool.py
src/multi_agent_rag/utils/: logger.py  retry.py
src/multi_agent_rag/vectorstore/: ingestion.py  retriever.py
tests/: conftest.py  test_agents.py  test_graph.py  test_retrieval.py
