[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-agent-rag"
version = "0.1.0"
description = "Production-grade multi-agent RAG system with LangGraph, GPT-4o, and Chroma+BM25 hybrid search"
requires-python = ">=3.11,<3.15"
dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.0",
    "faiss-cpu>=1.7.0",
    "rank-bm25>=0.2.2",
    "streamlit>=1.39.0",
    "langsmith>=0.1.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.5.0",
    "tenacity>=9.0.0",
    "pypdf>=5.0.0",
    "structlog>=24.0.0",
    "python-dotenv>=1.0.0",
    "openai>=1.50.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.7.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
